[package]
name = "siren-torch"
version = "0.1.2"
edition = "2018"
readme = "README.md"
authors = ["Victor Nova <lostfreeman@gmail.com>"]
description = "SIREN neural network implementation in Rust for PyTorch."
keywords = ["pytorch", "deep-learning", "machine-learning","signal-processing"]
categories = ["science"]
license = "MIT"
repository = "https://github.com/lostmsu/Siren"

[dependencies]
tch = "0.5.0"

[dev-dependencies]
image = "0.23.14"
hound = "3.4.0"